--- a/index.html
+++ b/index.html
@@ -9,15 +9,22 @@
 </head>
 <body>
     <div class="conteiner">
-        <h1>To-Do List</h1>
-        <div>
-            <input type="text" id="notion">
-            <input type="button" value="Adicionar" id="btn-adc">
-            <input type="button" value="Apagar" id="remover">
+        <header>
+            <h1>To-Do List</h1>
+        </header>        
+        <div class="input">
+            <input type="text" id="notion" placeholder="Task">
+            <input type="button" value="Add" id="btn-adc">
+            <input type="button" value="Remove" id="remover">
         </div>
-    </div>
-
-    <div id="res"></div>
+        <div id="res" class="card">
+            <!-- <input type="radio" name="done" id="done"> -->
+            <!-- <label>Teste</label>           -->
+        </div>
+    </div>    
+    <footer>
+        <a target="_blank" href="https://github.com/riatladias">GitHub/riatladias</a>
+    </footer>
     <script src="./script/script.js"></script>
 </body>
 </html>
