adc nova funcionalidade (remove task)

--- a/index.html
+++ b/index.html
@@ -15,12 +15,9 @@
         <div class="input">
             <input type="text" id="notion" placeholder="Task">
             <input type="button" value="Add" id="btn-adc">
-            <input type="button" value="Remove" id="remover">
         </div>
-        <div id="res" class="card">
-            <!-- <input type="radio" name="done" id="done"> -->
-            <!-- <label>Teste</label>           -->
-        </div>
+        <ul id="res" class="card">
+        </ul>
     </div>    
     <footer>
         <a target="_blank" href="https://github.com/riatladias">GitHub/riatladias</a>
